base/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-flask-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: 637423663330.dkr.ecr.ap-northeast-2.amazonaws.com/baggu-vm:nginx-v1.26
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nfs-storage     # 추가된 부분
          mountPath: /usr/share/nginx/html  # 원하는 경로
      - name: flask
        image: 637423663330.dkr.ecr.ap-northeast-2.amazonaws.com/baggu-vm:flask-v1.26
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: image-pull-secret
      volumes:
        - name: nfs-storage      # 추가된 부분
        persistentVolumeClaim:
          claimName: test-claim-nfs  # PVC 이름
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
